tests/ui/error-codes/E0454.rs
#[link(name = "")] extern "C" {}
//~^ ERROR E0454

fn main() {
}

// ferrocene-annotations: fls_o0f9ae22ug1x
// Attribute link
